# tg-haskell

./: .gitignore  Dockerfile  LICENSE  README.md  tg-haskell.cabal
app/: Config.default.hs  Helpers.hs  Main.hs  RSS.hs  Telegram.hs
