cabal-version:       >=1.10

name:                tg-haskell
version:             0.1.0.0
synopsis:            A Telegram bot written in Haskell
homepage:            https://github.com/kkmoskalenko/tg-haskell#readme
bug-reports:         https://github.com/kkmoskalenko/tg-haskell/issues
license:             BSD3
license-file:        LICENSE
author:              Konstantin Moskalenko
maintainer:          kkmoskalenko@icloud.com
copyright:           (c) 2020, Konstantin Moskalenko
build-type:          Simple
extra-source-files:  README.md

executable tg-haskell
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13
  hs-source-dirs:      app
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kkmoskalenko/tg-haskell
